--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
+<nav>
+    <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Главная</a><br>
+    <a routerLink="/about" routerLinkActive="active">О сайте</a>
+</nav>
+
+
+<router-outlet></router-outlet>
+
+<hr>
 
 {{title}}
 
