--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav>
     <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Главная</a><br>
-    <a routerLink="/about" routerLinkActive="active">О сайте</a>
+    <a routerLink="/about" routerLinkActive="active">О сайте</a><br>
+    <a [routerLink]="['tmp','6']" routerLinkActive="active">Tmp with id : 6</a>
 </nav>
 
 
