--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,6 @@
 
 
     <a [routerLink]="['tmp','6']" routerLinkActive="active">Tmp with id : 6</a>
-    <a routerLink="/pipe" routerLinkActive="active" >Pipe</a>
 
 </nav>
 
@@ -16,7 +15,7 @@
 <router-outlet></router-outlet>
 
 <hr>
-
+Hellogit
 {{title}}
 
 <tmp-comp></tmp-comp>
