--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
     <button (click)='goHome()'>Go to Home</button>
 
 
-    <a [routerLink]="['tmp','6']" routerLinkActive="active">Tmp with id : 6</a>
-
+    <a [routerLink]="['tmp','6']" routerLinkActive="active">Tmp with id : 6</a><br>
+    <a routerLink="/pipe" routerLinkActive="active">Pipe</a>
 </nav>
 
 
