create pipe and  guard

--- a/src/app/pipe/pipe.component.html
+++ b/src/app/pipe/pipe.component.html
@@ -4,5 +4,7 @@
  pipe component  here
 </h2>   
 <p>
-    author name: {{birthday | date }} 
+    author name: {{name | uppercase  }} 
 </p>
+
+<button (click)="changeName()">change name</button>
